update all the api documentation

--- a/index.html
+++ b/index.html
@@ -102,10 +102,16 @@
         Welcome to the API documentation. Choose an API definition to explore:
       </p>
       <ul>
-        <li><a href="flight/">- Flight Ext API</a></li>
+        <li><a href="flight/">- Flight Fetch and Assignment API</a></li>
       </ul>
       <ul>
-        <li><a href="flightBranch/">- Flight Branch Ext API</a></li>
+        <li><a href="flightSegment/">- Flight Segment Fetch and Assignment API</a></li>
+      </ul>
+      <ul>
+        <li><a href="vol/">- CTO VOL API (To be replace with Flight Fetch and Assignment API)</a></li>
+      </ul>
+      <ul>
+        <li><a href="volBranche/">- CTO VOL BRANCHE API (To be replace with Flight Segment Fetch and Assignment API)</a></li>
       </ul>
       <ul>
         <li><a href="user/">- User Ext API</a></li>
