--- a/volBranche/index.html
+++ b/volBranche/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Click & Take Off - Airmate API</title>
+    <title>Click & Take Off - User ext API</title>
     <link rel="stylesheet" type="text/css" href="../swagger-ui.css" />
     <link rel="stylesheet" type="text/css" href="../index-swagger.css" />
     <link rel="icon" type="image/png" href="../favicon-32x32.png" sizes="32x32" />
@@ -15,8 +15,8 @@
     <script src="../swagger-ui-bundle.js" charset="UTF-8"></script>
     <script src="../swagger-ui-standalone-preset.js" charset="UTF-8"></script>
     <script>
-      window.ui["airmate"] = SwaggerUIBundle({
-        url: "airmate.yaml",
+      window.ui["volBranche"] = SwaggerUIBundle({
+        url: "volBranche.yaml",
         dom_id: "#swagger-ui",
         presets: [SwaggerUIBundle.presets.apis, SwaggerUIStandalonePreset],
         plugins: [SwaggerUIBundle.plugins.DownloadUrl],
