--- a/vol/index.html
+++ b/vol/index.html
@@ -6,8 +6,8 @@
     <title>Click & Take Off - User ext API</title>
     <link rel="stylesheet" type="text/css" href="../swagger-ui.css" />
     <link rel="stylesheet" type="text/css" href="../index-swagger.css" />
-    <link rel="icon" type="image/png" href="../favicon-logo.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="../favicon-logo.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="../favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="../favicon-16x16.png" sizes="16x16" />
   </head>
 
   <body>
@@ -15,8 +15,8 @@
     <script src="../swagger-ui-bundle.js" charset="UTF-8"></script>
     <script src="../swagger-ui-standalone-preset.js" charset="UTF-8"></script>
     <script>
-      window.ui["flightBranch"] = SwaggerUIBundle({
-        url: "flightBranch.yaml",
+      window.ui["vol"] = SwaggerUIBundle({
+        url: "vol.yaml",
         dom_id: "#swagger-ui",
         presets: [SwaggerUIBundle.presets.apis, SwaggerUIStandalonePreset],
         plugins: [SwaggerUIBundle.plugins.DownloadUrl],
